...

  void _loadFromUri(Uri uri) async {
    String? queryString = uri.queryParameters["q"];
    if (queryString == null) {
      setState(() {
        _errorMessage = """
No query string found.

Be sure to append ?q=MY_QUERY_STRING to end of the link you are using.

Example:
aiyu://to-chinese?q=hello

...
                          Navigator.of(context).pop();
                        } else {
                          SystemNavigator.pop();
                        }
                      },
                      child: const Text(
                        "Close",
                        style: TextStyle(
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                    ),
                  ),
...
